# roblox-studio-cli

./: .env.example  .gitignore  .luau-lsp.json  CLAUDE.md  PLAN-query-tools.md  TODO-devtools.md  detai_dynamic_ui_local_claude_plan.md  detai_local_claude_code_first_plan.md  detai_local_claude_code_first_plan_with_agent_sdk.md  package-lock.json  package.json  plan.md  plugin.project.json
.claude/: settings.json
.claude/skills/: build-verify.md  demolition.md  placement-guide.md  roblox-scripting.md  terrain.md  tool-making.md
bakable-desktop/: package-lock.json  package.json  vite.config.ts
bakable-desktop/src/: App.css  App.tsx
bakable-desktop/src-tauri/: build.rs
bakable-repo/: CLAUDE.md  asset-catalog-stud.json  asset-catalog.json  exec.lua  exec.result.txt
bakable-repo/.claude/: settings.json
bakable-repo/modules/: asset-organizer.luau  bootstrap.luau  camera.luau  catalog.luau  inventory-ui.luau  zone.luau  (+2 more)
cli/: index.js
daemon/: index.js  mcp-stdio.js
detai-desktop/: .gitignore  index.html  package.json
detai-desktop/src-tauri/: Cargo.toml  tauri.conf.json
detai-desktop/src-tauri/icons/: create_icons.sh
detai-desktop/src-tauri/src/: main.rs  plugin.rs  server.rs  speech.rs
detai-desktop/src-tauri/swift/: Capture.swift  Package.swift  Speech.swift
docs/: ai-skills-roadmap.md  azure-deployment.md  terrain-guide.md  vision-integration-roadmap.md  vlm-visual-reviewer-roadmap.md
plugin/: default.project.json
scripts/: build-api-skill.js  build-roblox-skills.js  update-luau-types.sh
server/: index.js
test-place/: default.project.json
(+119 files in other folders)
