[package]
name = "detai-desktop"
version = "0.1.0"
description = "DetAI Desktop Helper for Roblox Studio"
authors = ["DetAI"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-all", "updater", "notification-all", "path-all", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
swift-rs = "1.0.6"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
